syntax = "proto3";

package user;

option go_package = "/proto;user";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(UserRequest) returns (UserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(UserRequest) returns (DeleteUserResponse);
    rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
}

message UserRequest {
    int32 id = 1;
}

message UserResponse {
    User user = 1;
}

message User {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    int32 role_id = 4;
}

message CreateUserResponse {
    bool success = 1;
    string message = 2;
}

message UpdateUserRequest {
    int32 id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    int32 role_id = 5;
}

message UpdateUserResponse {
    bool success = 1;
    string message = 2;
}

message DeleteUserResponse {
    bool success = 1;
    string message = 2;
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
}

message GetUserByUsernameRequest {
    string username = 1;
}

message GetUserByUsernameResponse {
    User user = 1;
}
